--- a/RPH.csproj
+++ b/RPH.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RPHAddNewLayout.cs" />
     <Compile Include="RPHCommand.cs" />
     <Compile Include="RPHPlugIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
